arch/arm: apq8084: Add max17042 driver
Add the max17042 driver to the apq8084 build.

Change-Id: I8081cc0686fce3d5448fd141ddb1e4f786f96ded
Signed-off-by: Kenny Kessler <kenny.kessler@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/608272
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jason Knopsnyder <jasonk@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/configs/apq8084_defconfig
+++ b/arch/arm/configs/apq8084_defconfig
@@ -357,6 +357,7 @@ CONFIG_BATTERY_ANDROID=y
 CONFIG_SMB349_USB_CHARGER=y
 CONFIG_SMB350_CHARGER=y
 CONFIG_SMB135X_CHARGER=y
+CONFIG_BATTERY_MAX17042=y
 CONFIG_BATTERY_BQ28400=y
 CONFIG_BATTERY_BCL=y
 CONFIG_SENSORS_EPM_ADC=y
