arm/dt: apq8084: charging led
Configure MPP8 to drive charging (SOL) led for 8084 platform

Change-Id: I9d51c37a3755ecbbcc14843895671065f3e6d975
Signed-off-by: Dmitry Ornatsky <cdo021c@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/608304
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jason Hrycay <jason.hrycay@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
@@ -12,6 +12,7 @@
 
 #include "external-mdm9x25.dtsi"
 #include "apq8084-camera-sensor-cdp.dtsi"
+#include "apq8084-moto-common.dtsi"
 
 / {
 	aliases {
