ASoC msm: add tfa9890 dai links to machine driver
added tfa9890 dai links and enabled tfa9890 codec driver  in kconfig

Change-Id: I77240bacda5b3eb1338b16df2c4eff2adfa0176c
Signed-off-by: prabhu annabathula <prabhu.annabathula@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/608559
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/sound/soc/msm/Kconfig
+++ b/sound/soc/msm/Kconfig
@@ -245,6 +245,8 @@ config SND_SOC_APQ8084
 	select SND_SOC_CPE
 	select DOLBY_DS2
 	select SND_SOC_TPA6165A2
+	select SND_SOC_TFA9890
+
 	help
 	 To add support for SoC audio on APQ8084.
 	 This will enable sound soc drivers which
