--- a/arch/arm/boot/dts/qcom/apq8084-lexington-p0.dts
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington-p0.dts
@@ -21,5 +21,5 @@
 	compatible = "qcom,apq8084-lexington",
 		   "qcom,apq8084-moto",
 		   "qcom,apq8084";
-	qcom,board-id = <23 0>;
+	qcom,msm-id = <178 0x41 0x8100>;
 };
