misc: c55: add c55 control driver
This is Motorola's driver to control the TI C55 DSP IC. It is
intended to be a simple driver which exports the GPIOs for user
space use.

Change-Id: I7a2d1b5cd55456937aee19c9aa7bb48b3bf01988
Signed-off-by: Qiang Qiu <qqiu@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/608930
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jason Hrycay <jason.hrycay@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -64,4 +64,5 @@ obj-$(CONFIG_QPNP_MISC) += qpnp-misc.o
 obj-$(CONFIG_APQ8084_DOCKING_STATION)	+= apq8084_dock.o
 obj-y				+= qcom/
 obj-$(CONFIG_HAPTIC_DRV2605)	+= drv2605.o
+obj-$(CONFIG_C55_CTRL) += c55_ctrl.o
 obj-$(CONFIG_SENSORS_STM401) += stm401/
