defconfig: 8084: disable Qualcomm device trees
In the interest of space available, don't build the device tree binaries
for Qualcomm APQ targets.

Change-Id: Ibebac812ef1692d19f61c857ac4002a2b89f0491
Signed-off-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/608886
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/configs/apq8084_defconfig
+++ b/arch/arm/configs/apq8084_defconfig
@@ -77,6 +77,7 @@ CONFIG_MSM_HSIC_SYSMON=y
 CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_XPU_ERR_FATAL=y
+CONFIG_MMI_DEVICE_DTBS=y
 CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_PCI=y
 CONFIG_PCI_MSI=y
