defconfig: 8084: enable c55_ctrl driver
Change-Id: I652e797d2f6212ebd6fd004956c6511cd6f2123b
Signed-off-by: Qiang Qiu <qqiu@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/609243
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/configs/apq8084_defconfig
+++ b/arch/arm/configs/apq8084_defconfig
@@ -254,6 +254,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 CONFIG_UID_STAT=y
 CONFIG_HAPTIC_DRV2605=y
 CONFIG_QSEECOM=y
+CONFIG_C55_CTRL=y
 CONFIG_QPNP_MISC=y
 CONFIG_TI_DRV2667=y
 CONFIG_APQ8084_DOCKING_STATION=y
