--- a/arch/arm/configs/shamu_defconfig
+++ b/arch/arm/configs/shamu_defconfig
@@ -270,6 +270,7 @@ CONFIG_MOT_UTAG=y
 CONFIG_UID_STAT=y
 CONFIG_HAPTIC_DRV2605=y
 CONFIG_QSEECOM=y
+CONFIG_C55_CTRL=y
 CONFIG_QPNP_MISC=y
 CONFIG_TI_DRV2667=y
 CONFIG_CYPRESS_CAPSENSE_PROGRAMMING=y
