arm: dts: apq8084: add C55 DSP setup
Change-Id: I39699a139707509e837b6df525e957da5058c1b4
Signed-off-by: Qiang Qiu <qqiu@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/609246
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -221,6 +221,14 @@
 				<86 512 0 0>,
 				<86 512 500 800>;
 	};
+	ti,c55-ctrl {
+		compatible = "ti,c55-ctrl";
+		reg = <0 0>;
+		gpios = <&msmgpio 91 2>,      /* gpio_core */
+			<&msmgpio 85 0>,      /* gpio_reset */
+			<&msmgpio 76 1>,      /* gpio_ap_int */
+			<&msmgpio 140 2>;     /* gpio_c55_int */
+	};
 };
 
 &pma8084_lvs3 {
