arm: dts: apq8084: Disable PCIE bus.
Default apq8084 PCIE bus configuration uses gpios assigned to
sensor hub and C55. Disable it to avoid conflicts.

Change-Id: I8df9f46d840313f4e6300c94cc5ceb58a0a13149
Signed-off-by: Vladimir Karpovich <cvk011c@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/610229
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jason Hrycay <jason.hrycay@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -741,3 +741,11 @@
 &usb3 {
 	vbus_dwc3-supply = <&smb1357_otg_vreg>;
 };
+
+&gdsc_pcie_0{
+	status = "disabled";
+};
+
+&gdsc_pcie_1{
+	status = "disabled";
+};
