--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -128,9 +128,12 @@
 
 	gnss_qca1530: qca,qca1530 {
 		compatible = "qca,qca1530";
-		qca,reset-gpio = <&msmgpio 133 0>;	/* Reset line */
-		qca,reset-supply = <&pma8084_l9>;	/* Reset power regulator */
-		qca,pwr-supply = <&pma8084_l26>;	/* Power regulator */
+		qca,reset-gpio = <&msmgpio 133 0>;
+		qca,reset-supply = <&pma8084_l9>;
+		qca,pwr-supply = <&pma8084_l26>;
+		qca,xlna-supply = <&pma8084_l22>;
+		qca,xlna-voltage-level = <3000000 3000000>;
+		qca,xlna-current-level = <90000 100>;
 	};
 
 	vbat_disp_vreg: vbat_disp_vreg {
@@ -258,8 +261,6 @@
 };
 
 &blsp2_uart0 {
-	qcom,tx-gpio = <&msmgpio 130 0>;
-	qcom,rx-gpio = <&msmgpio 131 0>;
 	status = "ok";
 };
 
@@ -281,7 +282,6 @@
 	qcom,ap2mdm-wakeup-gpio = <&msmgpio 108 0x00>;
 	qcom,ap2mdm-vddmin-gpio = <&msmgpio 114 0x00>;
 	qcom,mdm2ap-vddmin-gpio = <&msmgpio 115 0x00>;
-	qcom,ap2mdm-chnlrdy-gpio = <&msmgpio 106 0x00>;
 	status = "ok";
 };
 
@@ -573,6 +573,7 @@
 		regulator-name = "smb1357_otg_vreg";
 		qcom,soft-vfloat-comp-disabled;
 		therm-bias-supply = <&pma8084_lvs2>;
+		qcom,thermal-mitigation = <1500 700 600 0>;
 	};
 
 	max17050: max17050-battery@36 {
