arm/dts: apq8084: Enable C55 ADC clock
Configure PM GPIO 10 as BB_CLK2 clock control.

Change-Id: Ifcf94dc911e591924973edc52e74a763cb44c7b3
Signed-off-by: Vladimir Karpovich <cvk011c@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/610849
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Russell Knize <rknize@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -425,6 +425,11 @@
 	};
 
 	gpio@c900 { /* GPIO 10 */
+		qcom,mode = <0>;		/* QPNP_PIN_MODE_DIG_IN */
+		qcom,pull = <4>;		/* QPNP_PIN_PULL_DN */
+		qcom,src-sel = <2>;		/* QPNP_PIN_SEL_FUNC_1 */
+		qcom,vin-sel = <2>;		/* QPNP_PIN_VIN2 */
+		qcom,master-en = <1>;
 	};
 
 	gpio@ca00 { /* GPIO 11 */
