power: Initial MMI Wireless Driver
This is the initial version of the MMI Wireless
Charging driver.

Change-Id: I0f6a1941e0b51741bac20a829240f98a7b16d6d3
Signed-off-by: Kenny Kessler <kenny.kessler@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/611330
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jason Knopsnyder <jasonk@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/drivers/power/Kconfig
+++ b/drivers/power/Kconfig
@@ -394,6 +394,16 @@ config SMB135X_CHARGER
 	  The driver reports the charger status via the power supply framework.
 	  A charger status change triggers an IRQ via the device STAT pin.
 
+config MMI_WLS_CHARGER
+	tristate "MMI Wireless Charger"
+	depends on I2C
+	help
+	  Say Y to include support for MMI Wireless Charger.
+	  This a generic Wireless charger Driver used with
+	  MMI Products.
+	  The driver supports multiple vendor chips.
+	  The driver supports the Qi standard.
+
 config BQ27520_TEST_ENABLE
 	bool "Enable BQ27520 Fuel Gauge Chip Test"
 	depends on BATTERY_BQ27520
