ARM: dts: msm: Cleanup MOT display DTS files
- Cleanup the MOT Display DTs files.
- Consolidate the QHD display DTS files into 1.
- Allow to control the DSI and Panel Voltage supplies separately

Change-Id: I67f3f52bbdeb856f970cab25db1721209d0d92a1
Signed-off-by: Bang Nguyen <bnguyen1@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/614366
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Reviewed-by: Shi-Yong Li <a22381@motorola.com>
Reviewed-by: Zachary Crosby <zac@motorola.com>
Reviewed-by: Stephen Rossbach <rossbach@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
@@ -14,6 +14,10 @@
 #include "apq8084-moto-common.dtsi"
 #include "dsi-panel-mot-smd-720p-video.dtsi"
 
+&pma8084_l22 {
+	regulator-always-on;
+};
+
 &mdss_mdp {
 	qcom,mdss-pref-prim-intf = "dsi";
 };
@@ -21,10 +25,12 @@
 &mdss_dsi0 {
 	qcom,dsi-pref-prim-pan = <&mot_smd_720p_vid>;
 	qcom,platform-reset-gpio = <&msmgpio 86 0>;
+	qcom,platform-te-gpio = <&msmgpio 12 0>;
 	vbat_disp-supply = <&vbat_disp_vreg>;
 	vdd_disp-supply = <&vdd_disp_vreg>;
 	vci_disp-supply = <&vci_disp_vreg>;
-
+	/delete-property/ vdd-supply;
+	/delete-node/ qcom,platform-supply-entry1;
 };
 
 &mdss_dsi1 {
