--- a/arch/arm/boot/dts/qcom/dsi-panel-mot-smd-720p-video.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-mot-smd-720p-video.dtsi
@@ -13,11 +13,6 @@
 
 &mdss_mdp {
 	mot_smd_720p_vid: qcom,mdss_dsi_mot_smd_720p_video {
-		compatible = "qcom,mdss-dsi-panel";
-
-		mmi,panel_name = "mipi_mot_video_smd_720";
-		qcom,panel-esd-power-mode-chk = <0x94>;
-
 		qcom,mdss-dsi-panel-name = "mipi_mot_video_smd_720";
 		qcom,mdss-dsi-panel-controller = <&mdss_dsi0>;
 		qcom,mdss-dsi-panel-type = "dsi_video_mode";
@@ -41,7 +36,6 @@
 		qcom,mdss-dsi-v-top-border = <0>;
 		qcom,mdss-dsi-v-bottom-border = <0>;
 		qcom,mdss-dsi-bpp = <24>;
-		qcom,mdss-dsi-color-order = <0>;
 		qcom,mdss-dsi-underflow-color = <0xff>;
 		qcom,mdss-dsi-border-color = <0>;
 
@@ -87,11 +81,13 @@
 		qcom,mdss-dsi-t-clk-pre = <0x1b>;
 		qcom,mdss-dsi-bl-min-level = <1>;
 		qcom,mdss-dsi-bl-max-level = <4095>;
-		qcom,mdss-dsi-dma-trigger = <4>;
-		qcom,mdss-dsi-mdp-trigger = <0>;
+		qcom,mdss-dsi-dma-trigger = "trigger_sw";
+
 		qcom,mdss-dsi-bl-pmic-control-type = "bl_ctrl_dcs";
 
-		qcom,mdss-dsi-reset-sequence = <1 11>;
+		qcom,mdss-dsi-reset-sequence = <1 0>;
+		qcom,mdss-dsi-dis-reset-sequence = <0 0>;
+
 		qcom,platform-supply-entry1 {
 			qcom,supply-name = "vbat_disp";
 			qcom,supply-min-voltage = <5000000>;
@@ -99,7 +95,7 @@
 			qcom,supply-enable-load = <300000>;
 			qcom,supply-disable-load = <100>;
 			qcom,supply-pre-on-sleep = <0>;
-			qcom,supply-post-on-sleep = <10>;
+			qcom,supply-post-on-sleep = <0>;
 			qcom,supply-pre-off-sleep = <0>;
 			qcom,supply-post-off-sleep = <0>;
 		};
@@ -110,7 +106,7 @@
 			qcom,supply-enable-load = <300000>;
 			qcom,supply-disable-load = <100>;
 			qcom,supply-pre-on-sleep = <0>;
-			qcom,supply-post-on-sleep = <10>;
+			qcom,supply-post-on-sleep = <0>;
 			qcom,supply-pre-off-sleep = <0>;
 			qcom,supply-post-off-sleep = <0>;
 		};
