arm/dt: apq8084: configure BT uart
BT software has to use ttyHS0 for serial communication.
Setting alias for uart6 to match this requirement.
Remove blsp2_uart0 interface because it is not used
for uart. As uart it was taking ttyHS0 alias breaking
default BT configuration.

Change-Id: I081c4bd08573e2658a3c88c7acbb9c422c8be5c2
Signed-off-by: Dmitry Ornatsky <cdo021c@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/612887
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Dmitry Ornatsky <ornatsky@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -17,6 +17,7 @@
 / {
 	aliases {
 		serial0 = &blsp2_uart1;
+		uart0 = &uart6;
 		uart3 = &blsp2_uart3;
 	};
 
@@ -257,10 +258,6 @@
 };
 
 &blsp2_uart1 {
-	status = "ok";
-};
-
-&blsp2_uart0 {
 	status = "ok";
 };
 
