--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -725,4 +725,14 @@ config SENSORS_CAPELLA_CM36283
 
 	  To compile this driver as a module, choose M here: the
 	  module will be called CM36283.
+
+config INPUT_VALIDITY_METALLICA
+	tristate "Validity Metallica finger print sensor"
+	default n
+	help
+	  Say Y here if you wish to include support for the Validity
+	  Metallica finger print sensor.
+
+	  If unsure, say N.
+
 endif
