arm/dts: apq8084: moto: restrict L3 to 1.0V
Necessitated by a switch to a new PMIC in Quark P1 boards.

Also remove ufs-related entries; hardware is not used in Motorola design
and has conflicting use of L3.

Change-Id: Ic8abc042063556ac382628896ccb2562f7f2024f
Signed-off-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/614362
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -253,6 +253,12 @@
 	regulator-always-on;
 };
 
+&pma8084_l3 {
+	regulator-min-microvolt = <1000000>;
+	regulator-max-microvolt = <1000000>;
+	qcom,init-voltage = <1000000>;
+};
+
 &pma8084_l17 {
 	regulator-always-on;
 };
@@ -293,14 +299,6 @@
 	qcom,ap2mdm-wakeup-gpio = <&msmgpio 108 0x00>;
 	qcom,ap2mdm-vddmin-gpio = <&msmgpio 114 0x00>;
 	qcom,mdm2ap-vddmin-gpio = <&msmgpio 115 0x00>;
-	status = "ok";
-};
-
-&ufsphy1 {
-	status = "ok";
-};
-
-&ufs1 {
 	status = "ok";
 };
 
