--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -47,6 +47,10 @@
 		/delete-property/ qcom,quat-auxpcm-gpio-ws;
 		/delete-property/ qcom,quat-auxpcm-gpio-dout;
 		/delete-property/ qcom,quat-auxpcm-gpio-din;
+		qcom,prim-auxpcm-gpio-clk  = <&msmgpio 77 0>;
+		qcom,prim-auxpcm-gpio-sync = <&msmgpio 78 0>;
+		qcom,prim-auxpcm-gpio-din  = <&msmgpio 79 0>;
+		qcom,prim-auxpcm-gpio-dout = <&msmgpio 80 0>;
 		pinctrl-names = "pmx-quad-mi2s-sleep",
 				"pmx-quad-mi2s-active";
 		pinctrl-0 = <&quad_mi2s_sleep>;
@@ -73,6 +77,16 @@
 			compatible = "qcom,msm-dai-q6-mi2s";
 			qcom,msm-dai-q6-mi2s-dev-id = <3>;
 			qcom,msm-mi2s-rx-lines = <2>;
+			qcom,msm-mi2s-tx-lines = <1>;
+		};
+	};
+
+	qcom,msm-dai-mi2s {
+		compatible = "qcom,msm-dai-mi2s";
+		qcom,msm-dai-q6-mi2s-prim {
+			compatible = "qcom,msm-dai-q6-mi2s";
+			qcom,msm-dai-q6-mi2s-dev-id = <0>;
+			qcom,msm-mi2s-rx-lines = <0>;
 			qcom,msm-mi2s-tx-lines = <1>;
 		};
 	};
