--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -247,6 +247,15 @@
 			<&msmgpio 76 1>,      /* gpio_ap_int */
 			<&msmgpio 140 2>;     /* gpio_c55_int */
 	};
+	factory_support {
+		compatible = "mmi,factory-support-kungpow";
+		gpios = <&pma8084_gpios 17 0x0>, /* GPIOF_OUT_INIT_LOW */
+			<&pma8084_mpps 7 0x1>, /* GPIOF_IN */
+			<&pma8084_mpps 6 0x1>; /* GPIOF_IN */
+		gpio-names = "factory_kill_disable",
+				"factory_cable_detect",
+				"factory_warn";
+	};
 };
 
 &pma8084_lvs3 {
@@ -494,7 +503,7 @@
 		qcom,output-type = <0>;		/* CMOS logic */
 		qcom,invert = <0>;		/* Output low initially */
 		qcom,vin-sel = <2>;		/* VIN 2 */
-		qcom,src-sel = <3>;		/* Function 2 */
+		qcom,src-sel = <0>;		/* GPIO */
 		qcom,out-strength = <2>;	/* Medium */
 		qcom,master-en = <1>;		/* Enable GPIO */
 	};
@@ -564,9 +573,15 @@
 	};
 
 	mpp@a500 { /* MPP 6 */
+		qcom,mode = <0>;          /* QPNP_PIN_MODE_DIG_IN */
+		qcom,vin-sel = <2>;
+		qcom,master-en = <1>;
 	};
 
 	mpp@a600 { /* MPP 7 */
+		qcom,mode = <0>;          /* QPNP_PIN_MODE_DIG_IN */
+		qcom,vin-sel = <2>;
+		qcom,master-en = <1>;
 	};
 
 	mpp@a700 { /* MPP 8 */
