arm/dts: 8084: add touchscreen buttons
Adding TSB support for Quark.

Change-Id: I2a05560d7179723d176fadb103a845feeee81ae3
Signed-off-by: Konstantin Makariev <hcv867@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/614773
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -681,6 +681,7 @@
 			<&msmgpio 97 0>;        /* RESET */
 		touch_vdd-supply = <&pma8084_s4>;
 		touch_avdd-supply = <&pma8084_l19>;
+		atmel,key-buttons = <59 61 60 0 0 0 0 0>; /* KEY_F1,F2,F3 */
 		atmel,cfg {
 			atmel,family-id = <0xa4>;
 			atmel,variant-id = <0x7>;
