dts: 8084: Configure PMGPIO 13 for USB_VBUS_DET
PMGPIO 13 needs to be configured as an input with no pull down
for Vbus detection.

Change-Id: I0d2979e279b8d479510eca7c2a88c6373a3590e5
Signed-off-by: Ravi Vembu <a18394@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/615323
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Ravikumar Vembu <raviv@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -462,6 +462,12 @@
 	};
 
 	gpio@cc00 { /* GPIO 13 */
+		/* USB_VBUS_DET */
+		qcom,mode = <0>;               /* QPNP_PIN_MODE_DIG_IN */
+		qcom,pull = <5>;               /* NO PULL */
+		qcom,vin-sel = <2>;            /* QPNP_PIN_VIN2 */
+		qcom,src-sel = <0>;            /* GPIO */
+		qcom,master-en = <1>;          /* Enable GPIO */
 	};
 
 	gpio@cd00 { /* GPIO 14 */
