--- a/arch/arm/boot/dts/qcom/dsi-panel-mot-dummy-qhd-video.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-mot-dummy-qhd-video.dtsi
@@ -47,6 +47,7 @@
 		qcom,mdss-dsi-bllp-power-mode;
 		qcom,mdss-dsi-lane-0-state;
 		qcom,mdss-dsi-lane-1-state;
+		qcom,mdss-dsi-tx-eot-append;
 		qcom,mdss-dsi-panel-timings = [82 1c 12 00 40 42 16 1e 14 03 04 00];
 		qcom,mdss-dsi-t-clk-post = <0x04>;
 		qcom,mdss-dsi-t-clk-pre = <0x1b>;
