--- a/arch/arm/boot/dts/qcom/dsi-panel-mot-smd-QHD-cmd.dtsi
+++ b/arch/arm/boot/dts/qcom/dsi-panel-mot-smd-QHD-cmd.dtsi
@@ -46,6 +46,7 @@
 		qcom,mdss-dsi-lane-1-state;
 		qcom,mdss-dsi-lane-2-state;
 		qcom,mdss-dsi-lane-3-state;
+		qcom,mdss-dsi-tx-eot-append;
 		qcom,mdss-dsi-panel-timings = [DA 41 38 00 5B 53 37 43 56 03
 									04 00];
 		qcom,mdss-dsi-reset-sequence = <1 11>;
@@ -160,6 +161,7 @@
 		qcom,mdss-dsi-lane-1-state;
 		qcom,mdss-dsi-lane-2-state;
 		qcom,mdss-dsi-lane-3-state;
+		qcom,mdss-dsi-tx-eot-append;
 		qcom,mdss-dsi-panel-timings = [DA 41 38 00 5B 53 37 43 56 03
 									04 00];
 		qcom,mdss-dsi-t-clk-post = <0x03>;
