--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -622,6 +622,7 @@
 		qcom,thermal-mitigation = <1500 700 600 0>;
 		qcom,dc-psy-type = "Wireless";
 		qcom,dc-psy-ma = <600>;
+		qcom,bms-psy-name = "max170xx_battery";
 	};
 
 	max17050: max17050-battery@36 {
