arm: dts: Add focus actuator node to camera DTSI.
Add generic focus actuator node for ROHM_BU64295GWZ to
Lexington/Quark camera DTSI.

Change-Id: I788f1db2fbeab4704d0112f805f00b3b7bc3d683
Signed-off-by: Rob Kubicki <w17311@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/617003
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Elena Satraitis <esatrait@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-mot-camera-sensor.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-mot-camera-sensor.dtsi
@@ -13,6 +13,13 @@
 
 &cci {
 
+	rohm_bu64296gwx: qcom,actuator@18 {
+		cell-index = <1>;
+		reg = <0x18>;
+		compatible = "qcom,actuator";
+		qcom,cci-master = <0>;
+	};
+
 	qcom,camera@20 {
 		cell-index = <0>;
 		compatible = "qcom,camera";
@@ -20,6 +27,7 @@
 		qcom,slave-id = <0x20 0x0016 0x0220>;
 		qcom,csiphy-sd-index = <0>;
 		qcom,csid-sd-index = <0>;
+		qcom,actuator-src = <&rohm_bu64296gwx>;
 		qcom,mount-angle = <90>;
 		qcom,sensor-name = "imx220";
 		cam_vdig-supply = <&pma8084_l27>;
