dts/msm8084: Remove PCIE 2 configuration
PCIE driver is trying to start bus 2 even if node status is
disabled. So the node should be deleted.

Change-Id: I91a74305f99d12db0d11a411c593e212e7110220
Signed-off-by: Vladimir Karpovich <cvk011c@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/617118
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -836,6 +836,6 @@
 	vbus_dwc3-supply = <&smb1357_otg_vreg>;
 };
 
-&gdsc_pcie_1{
-	status = "disabled";
+&soc {
+	/delete-node/ qcom,pcie@fc528000;
 };
