arm/dts: 8084: specify suspend method for atmel driver
Atmel touch should keep power supply on when suspended. Driver was
made to support suspend method option to enable putting touch IC in
LPM while suspended instead of keeping it in reset. This adds
suspend-method-lpm option to DTS for Quark.

Change-Id: I04532d605902a1aa7d801c9f6f73ce2ca7e5acaa
Signed-off-by: Konstantin Makariev <hcv867@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/617761
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -702,6 +702,7 @@
 		touch_vdd-supply = <&pma8084_s4>;
 		touch_avdd-supply = <&pma8084_l19>;
 		atmel,key-buttons = <59 61 60 0 0 0 0 0>; /* KEY_F1,F2,F3 */
+		atmel,suspend-method-lpm;
 		atmel,cfg {
 			atmel,family-id = <0xa4>;
 			atmel,variant-id = <0x7>;
