--- a/arch/arm/configs/apq8084_defconfig
+++ b/arch/arm/configs/apq8084_defconfig
@@ -79,6 +79,7 @@ CONFIG_MSM_ENABLE_WDOG_DEBUG_CONTROL=y
 CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_XPU_ERR_FATAL=y
 CONFIG_MMI_DEVICE_DTBS=y
+CONFIG_MMI_SOC_INFO=y
 CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_MMI_UNIT_INFO=y
 CONFIG_PCI=y
