arm/dt: 8084: moto: Set VREG_5P0 always-on
On the Motorola reference platform, this regulator supplies many
peripherals which require this to constantly be on. Ideally, the
individual drivers should add logic to request this resource, but lets
just enable this anyway and improve the drivers (if present) as needed.

The vbus_det_vreg is phandle to the fixed-regulator controlled by the
pma8084 MPP3. Simply re-using that phandle to avoid merge headaches by
adding yet another phandle reference in QC dtsi.

Change-Id: I91c1ce6620755e708400fc04db728b6480b7461d
Signed-off-by: Jason Hrycay <jason.hrycay@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/617767
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Reviewed-by: Christopher Fries <c.fries@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -840,3 +840,10 @@
 &soc {
 	/delete-node/ qcom,pcie@fc528000;
 };
+
+/* This is VREG_5P0, controlled via MPP3 */
+&vbus_det_vreg {
+    regulator-always-on;
+    regulator-boot-on;
+    qcom,init-voltage = <5000000>;
+};
