arm/dt: msm8974: Enable ALSA to H2w driver
Enable ALSA to H2W headset detection events converter
for the factory test application.

Change-Id: Ibcad72b1f4b559bc1ed071410d2ecd55ed619285
Signed-off-by: Vladimir Karpovich <cvk011c@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/618214
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Igor Kovalenko <igork@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -291,6 +291,10 @@
 				"factory_cable_detect",
 				"factory_warn";
 	};
+
+	alsa_to_h2w {
+		compatible = "mmi,alsa-to-h2w";
+	};
 };
 
 &pma8084_lvs3 {
