arm/dts: 8084: Config the PCB temp sensor
Configure the the external PCB temperature sensors i2c bus
and interrupt.

Change-Id: Ic5798361802daf947e029652565c603763eb925c
Signed-off-by: Jason Knopsnyder <jasonk@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/619232
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Reviewed-by: Kenneth Kessler <kennykessler@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-moto-common.dtsi
@@ -816,6 +816,11 @@
 		nxp,tfa_max-vol-steps = <15>;
 		nxp,tfa-dev = "left";
 	};
+	tmp108@48 {
+		compatible = "ti,tmp108";
+		reg = <0x48>;
+		gpios = <&msmgpio 60 0>;
+	};
 };
 
 &i2c_12 {
