--- a/sound/soc/codecs/Kconfig
+++ b/sound/soc/codecs/Kconfig
@@ -125,6 +125,7 @@ config SND_SOC_ALL_CODECS
 	select SND_SOC_WM9712 if SND_SOC_AC97_BUS
 	select SND_SOC_WM9713 if SND_SOC_AC97_BUS
 	select SND_SOC_TPA6165A2 if I2C
+	select SND_SOC_FSA8500 if I2C
         help
           Normally ASoC codec drivers are only built if a machine driver which
           uses them is also built since they are only usable with a machine
@@ -563,4 +564,7 @@ config SND_SOC_MSM_HDMI_CODEC_RX
         supports hdmi panel.
 
 config SND_SOC_TPA6165A2
+	tristate
+
+config SND_SOC_FSA8500
 	tristate
