--- a/sound/soc/msm/Kconfig
+++ b/sound/soc/msm/Kconfig
@@ -246,6 +246,7 @@ config SND_SOC_APQ8084
 	select DOLBY_DS2
 	select SND_SOC_TPA6165A2
 	select SND_SOC_TFA9890
+	select SND_SOC_FSA8500
 
 	help
 	 To add support for SoC audio on APQ8084.
