--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -129,6 +129,7 @@ dtb-$(CONFIG_ARCH_MSM) += msmplutonium-sim.dtb
 endif
 
 dtb-$(CONFIG_ARCH_APQ8084) += apq8084-lexington-p0.dtb \
+	apq8084-lexington-p1a.dtb \
 	apq8084-quark-p0.dtb
 
 ifeq ($(CONFIG_MMI_DEVICE_DTBS),y)
