--- a/arch/arm/boot/dts/qcom/apq8084-lexington-p1a.dts
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington-p1a.dts
@@ -17,11 +17,23 @@
 #include "apq8084-lexington.dtsi"
 
 / {
-	qcom,msm-id = <178 0x41 0x8100>;
+	qcom,msm-id = <178 0x41 0x81a0>;
 };
-
 &soc {
 	sound {
-		qcom,ext_hs_detect = "tpa6165";
+		qcom,ext_hs_detect = "fsa8500";
+	};
+};
+&i2c_8 {
+	/delete-node/ tpa6165xx@40;
+
+	fsa8500@23 {
+		compatible = "fairchild,fsa8500";
+		reg = <0x23>;
+		gpios = <&msmgpio 9 0x0>;
+		hs_det_vdd-supply = <&pma8084_lvs2>;
+		hs_det_micvdd-supply = <&pma8084_l18>;
+		fsa8500-init-regs = <0x0C 0xA1>,
+				    <0x0F 0xF9>;
 	};
 };
