--- a/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-lexington.dtsi
@@ -14,6 +14,13 @@
 #include "apq8084-moto-common.dtsi"
 #include "dsi-panel-mot-smd-720p-video.dtsi"
 
+/ {
+	model = "Motorola APQ 8084 Lexington";
+	compatible = "qcom,apq8084-lexington",
+		   "qcom,apq8084-moto",
+		   "qcom,apq8084";
+};
+
 &pma8084_l22 {
 	regulator-always-on;
 };
