Revert "ARM: dts: msm: Temporary keep display voltages on"
Revert "(CR): ARM: dts: msm: Temporary keep display voltages on"

This reverts commit 325b1e48ed5f374feff9ec3c3939a23d8a0177fd.

Change-Id: I01451edc08ff8805a36e32b88939bb43cda75863
Reviewed-on: http://gerrit.pcs.mot.com/619894
Submit-Approved: Jira Key <jirakey@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Reviewed-by: Zachary Crosby <zac@motorola.com>
Reviewed-by: Shi-Yong Li <a22381@motorola.com>
Reviewed-by: Joseph Swantek <jswantek@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-quark.dtsi
+++ b/arch/arm/boot/dts/qcom/apq8084-quark.dtsi
@@ -33,6 +33,11 @@
 	regulator-min-microvolt = <3300000>;
 	regulator-max-microvolt = <3300000>;
 	qcom,init-voltage = <3300000>;
+	/delete-property/ regulator-always-on;
+};
+
+&pma8084_lvs3 {
+	/delete-property/ regulator-always-on;
 };
 
 &mdss_fb0 {
