arm/dt: quark: add msm-id for MAXX variant
Quark MAXX uses 'D' hwrev ID.

Change-Id: Ia8e23cedc6fdebbce1ea70c3e061d8bc393b6274
Signed-off-by: Jeffrey Carlyle <jeff.carlyle@motorola.com>
Reviewed-on: http://gerrit.pcs.mot.com/619828
SLTApproved: Slta Waiver <sltawvr@motorola.com>
Tested-by: Jira Key <jirakey@motorola.com>
Reviewed-by: Jason Hrycay <jason.hrycay@motorola.com>
Submit-Approved: Jira Key <jirakey@motorola.com>

--- a/arch/arm/boot/dts/qcom/apq8084-quark-p0.dts
+++ b/arch/arm/boot/dts/qcom/apq8084-quark-p0.dts
@@ -20,7 +20,8 @@
 	compatible = "qcom,apq8084-quark",
 		   "qcom,apq8084-moto",
 		   "qcom,apq8084";
-	qcom,msm-id = <178 0x42 0x8000>;
+	qcom,msm-id = <178 0x42 0x8000>,
+		  <178 0x44 0x8000>; /* MAXX */
 };
 
 &soc {
