--- a/arch/arm/configs/apq8084_defconfig
+++ b/arch/arm/configs/apq8084_defconfig
@@ -667,3 +667,6 @@ CONFIG_MOBICORE_API=m
 CONFIG_SENSORS_STM401=y
 CONFIG_PROC_DEVICETREE=y
 CONFIG_ALSA_TO_H2W=y
+CONFIG_MMC_MSM_RAW=y
+CONFIG_APANIC_MMC=y
+CONFIG_APANIC_PLABEL="kpan"
